fixed the permanent horizontal scrolling

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 html {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
 }
 
